--- a/BE.TradeeHub.CustomerService.Application/BE.TradeeHub.CustomerService.Application.csproj
+++ b/BE.TradeeHub.CustomerService.Application/BE.TradeeHub.CustomerService.Application.csproj
@@ -9,11 +9,11 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="HotChocolate.AspNetCore" Version="13.8.1" />
+        <PackageReference Include="HotChocolate.AspNetCore" Version="14.0.0-p.22" />
         <PackageReference Include="HotChocolate.AspNetCore.Playground" Version="10.5.5" />
-        <PackageReference Include="HotChocolate.Data.MongoDb" Version="13.8.1" />
+        <PackageReference Include="HotChocolate.Data.MongoDb" Version="14.0.0-p.22" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.0"/>
-        <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0"/>
+        <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
     </ItemGroup>
 
     <ItemGroup>
