--- a/BE.TradeeHub.CustomerService.Infrastructure/BE.TradeeHub.CustomerService.Infrastructure.csproj
+++ b/BE.TradeeHub.CustomerService.Infrastructure/BE.TradeeHub.CustomerService.Infrastructure.csproj
@@ -7,7 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Bogus" Version="35.0.1" />
+      <PackageReference Include="Bogus" Version="35.3.0" />
       <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
       <PackageReference Include="MongoDB.Driver" Version="2.23.1" />
     </ItemGroup>
@@ -16,6 +16,10 @@
       <Reference Include="Microsoft.Extensions.Configuration.Abstractions">
         <HintPath>..\..\..\..\..\usr\local\share\dotnet\shared\Microsoft.AspNetCore.App\8.0.0\Microsoft.Extensions.Configuration.Abstractions.dll</HintPath>
       </Reference>
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\BE.TradeeHub.CustomerService.Domain\BE.TradeeHub.CustomerService.Domain.csproj" />
     </ItemGroup>
 
 </Project>
