--- a/BE.TradeeHub.CustomerService.Application/appsettings.json
+++ b/BE.TradeeHub.CustomerService.Application/appsettings.json
@@ -6,8 +6,16 @@
     }
   },
   "AllowedHosts": "*",
-  "MongoDB": {
-    "ConnectionString": "mongodb://localhost:27017",
-    "DatabaseName": "CustomerDB"
+  "AppSettings": {
+    "AllowedOrigins": ["http://localhost:3000"],
+    "Cognito" : {
+      "AppClientId" : "61u3jgn4afgsj8e7v7209fn5l",
+      "UserPoolId" : "eu-west-2_g1ulPRhbj",
+      "AWSRegion" : "eu-west-2"
+    },
+    "MongoDB": {
+      "ConnectionString": "mongodb://localhost:27017",
+      "DatabaseName": "TradeeHubDB"
+    }
   }
 }
