--- a/BE.TradeeHub.CustomerService.Application/BE.TradeeHub.CustomerService.Application.csproj
+++ b/BE.TradeeHub.CustomerService.Application/BE.TradeeHub.CustomerService.Application.csproj
@@ -10,12 +10,13 @@
 
     <ItemGroup>
         <PackageReference Include="AWSSDK.Core" Version="3.7.301.5" />
-        <PackageReference Include="HotChocolate.AspNetCore" Version="14.0.0-p.22" />
-        <PackageReference Include="HotChocolate.AspNetCore.Authorization" Version="14.0.0-p.23" />
-        <PackageReference Include="HotChocolate.AspNetCore.Playground" Version="10.5.5" />
-        <PackageReference Include="HotChocolate.Data.MongoDb" Version="14.0.0-p.22" />
+        <PackageReference Include="HotChocolate.AspNetCore" Version="13.8.1" />
+        <PackageReference Include="HotChocolate.AspNetCore.Authorization" Version="13.8.1" />
+        <PackageReference Include="HotChocolate.Data.MongoDb" Version="13.8.1" />
+        <PackageReference Include="HotChocolate.Types.Filters" Version="13.8.1" />
+        <PackageReference Include="HotChocolate.Types.Sorting" Version="13.8.1" />
         <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.1" />
-        <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.0"/>
+        <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.1" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
     </ItemGroup>
 
