--- a/BE.TradeeHub.CustomerService.Application/BE.TradeeHub.CustomerService.Application.csproj
+++ b/BE.TradeeHub.CustomerService.Application/BE.TradeeHub.CustomerService.Application.csproj
@@ -31,6 +31,9 @@
       <Content Update="appsettings.Docker.json">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </Content>
+      <Content Update="appsettings.json">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </Content>
     </ItemGroup>
 
     <ItemGroup>
