--- a/BE.TradeeHub.CustomerService.Application/appsettings.json
+++ b/BE.TradeeHub.CustomerService.Application/appsettings.json
@@ -13,6 +13,10 @@
       "UserPoolId" : "eu-west-2_g1ulPRhbj",
       "AWSRegion" : "eu-west-2"
     },
+    "AWS": {
+      "S3BucketName": "tradeehub-pricebook",
+      "CloudFrontUrl": "https://d29n3hw9qp9q1.cloudfront.net/"
+    },
     "MongoDB": {
       "ConnectionString": "mongodb://localhost:27017/?replicaSet=rs0",
       "DatabaseName": "TradeeHubDB"
