--- a/BE.TradeeHub.CustomerService.Domain/BE.TradeeHub.CustomerService.Domain.csproj
+++ b/BE.TradeeHub.CustomerService.Domain/BE.TradeeHub.CustomerService.Domain.csproj
@@ -9,6 +9,11 @@
     <ItemGroup>
       <PackageReference Include="HotChocolate" Version="13.8.1" />
       <PackageReference Include="MongoDB.Bson" Version="2.23.1" />
+      <PackageReference Include="MongoDB.Driver" Version="2.23.1" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Interfaces\Services\" />
     </ItemGroup>
 
 </Project>
